# Fast-API-2

backend/: .env.dev  Dockerfile  alembic.ini  docker-compose.yaml  prestart.sh  pyproject.toml
backend/backend/: aerich.ini  alembic.ini  main.py
backend/backend/scripts/: superuser.py
backend/backend/src/app/: routers.py
backend/backend/src/app/auth/: api.py  crud.py  jwt.py  logic.py  models.py  permissions.py  schemas.py  security.py  send_email.py  service.py
backend/backend/src/app/base/: crud_base.py  model_base.py  service_base.py
backend/backend/src/app/base/utils/: email.py  generate.py
backend/backend/src/app/user/: api.py  crud.py  models.py  schemas.py  service.py
backend/backend/src/config/: settings.py  social_app.py  tortoise_conf.py
backend/backend/src/db/: base.py  session.py
